--- a/index.html
+++ b/index.html
@@ -321,21 +321,18 @@
           </button>
         </div>
       </article>
+      <button class="button save__button button__animation button__decor" 
+        type="button" 
+        onclick="window['dialog-id'].showModal()" 
+        aria-controls="dialog-id">
+        <svg class="floppy button__text" viewBox="0 0 39 39">
+            <use href="./svg/floppy.svg#floppy"></use>
+        </svg>
+        <span class="button__text">
+          Сохранить на память
+        </span>
+      </button>
     </main>
-    
-    <button class="button save__button button__animation button__decor" 
-      type="button" 
-      onclick="window['dialog-id'].showModal()" 
-      aria-controls="dialog-id"
-    >
-      <svg class="floppy button__text" viewBox="0 0 39 39">
-          <use href="./svg/floppy.svg#floppy"></use>
-      </svg>
-      <span class="button__text">
-        Сохранить на память
-      </span>
-    </button>
-    
     <dialog class="dialog"
       id="dialog-id">
       <div class="dialog__content">
